--- a/index.html
+++ b/index.html
@@ -6,6 +6,33 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <button id="myBtn" class="btn">Start</button>
+    <script src="script.js"></script>
 </body>
 </html>
+
+
+<!-- 
+    Start button
+    when it's clicked
+    a timer starts and 
+    user is presented with a question
+    user answers question and is presented w another question
+    if answer is wrong, 
+    time is subtracted from the clock
+    when all questions are answered OR clock = 0,
+    the game is over
+    when game is over
+    user can save their initials and their score
+
+
+    What do we need? 
+    start button
+    prompts
+    variable to store answer to prompt   .value? 
+    timer
+    how to subtract time from timer? 
+    keep track of users answers 
+    calculate their answers into a score? 
+    variable to store their score and initials
+ -->
