--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
 </head>
-<body>
-    <h1>Coding Quiz Challenge</h1> 
-    <p>Try to answer the following code-related questions within the time limit. Keep in mind that inocrrect answers will penalize your score time by ten seconds!</p>
-    
-    <div id = "highscores"></div>
-    <div id = "time"></div>
 
-    <button id="myBtn" class="btn">Start</button>
-    <script src="script.js"></script>
+<body>
+    <!--LINK TO OTHER HTML HERE-->
+    <div id="wrapper">
+
+        <div id="Questions">
+            <h1>Coding Quiz Challenge</h1>
+            <p>Try to answer the following code-related questions within the time limit. Keep in mind that inocrrect answers
+                will penalize your score time by ten seconds!</p>
+        </div>
+
+        <div id="time"></div>
+
+        <button id="startBtn" class="btn">Start</button>
+
+        <script src="script.js"></script>
+    </div>
 </body>
+
 </html>
 
 
