--- a/index.html
+++ b/index.html
@@ -10,21 +10,15 @@
 </head>
 
 <body>
-    <!-- Link to highscores -->
     <a href="highcores.html">Highscores</a>
-    <!-- This is a wrapper -->
     <div id="wrapper">
-        <!-- Div for timer -->
         <div id="currentTime"></div>
-        <!-- Div for quiz content -->
         <div id="questionsDiv">
-            <h1>Coding Quiz Challenge</h1>
+            <h1>Coding Quiz</h1>
 
             <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect
                 answers will penalize your score/time by ten seconds!</p>
                 
-            <ul id="choicesUl"></ul>
-
             <button id="startTime">Start Quiz</button>
         </div>
 
