--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
             <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect
                 answers will penalize your score/time by ten seconds!</p>
-                
-            <button id="startTime">Start Quiz</button>
+
+            <button id="startBtn">Start Quiz</button>
         </div>
 
     </div>
