finished styles.css and highscores.js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a href="highcores.html">Highscores</a>
+    <a href="highscores.html">Highscores</a>
     <div id="wrapper">
         <div id="currentTime"></div>
         <div id="questionsDiv">
