--- a/highscores.html
+++ b/highscores.html
@@ -14,8 +14,8 @@
             <h1>Highscores</h1>
             <ul id="highScore"></ul>
             
-            <button id="goBack">Go Back</button>
-            <button id="clear">Clear Highscore</button>
+            <button id="backBtn">Go Back</button>
+            <button id="clearBtn" value="reset">Clear Highscore</button>
         </div>
     </div>
     <script src="highscores.js"></script>
