--- a/highscores.html
+++ b/highscores.html
@@ -11,7 +11,7 @@
     <div id="wrapper">
         <div id="currentTime"></div>
         <div id="questionsDiv">
-            <h1>Highscores</h1>
+            <h1>High Scores</h1>
             <ul id="highScore"></ul>
             
             <button id="backBtn">Go Back</button>
